CLIENT-1391: orderbook tooltip line wrap fix

--- a/src/modules/dex/directives/dexWatchlist/DexWatchlist.less
+++ b/src/modules/dex/directives/dexWatchlist/DexWatchlist.less
@@ -344,6 +344,11 @@ body.dex-demo .dex-wrapper {
             }
           }
         }
+
+        .tooltip-dex > span {
+          display: inline-block;
+          margin-right: 3px;
+        }
       }
     }
 
