--- a/src/modules/dex/directives/layout/layout.less
+++ b/src/modules/dex/directives/layout/layout.less
@@ -364,6 +364,16 @@ w-layout {
       cursor: pointer;
       text-shadow: 0 1px 6px rgba(78, 92, 110, 0.6);
       z-index: 10;
+      width: auto;
+      text-align: center;
+      white-space: nowrap;
+
+      span {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: inline-block;
+        text-align: center;
+      }
 
       &::before {
         position: absolute;
@@ -401,7 +411,7 @@ w-layout {
       .orderbook-table w-row:hover,
       .smart-table__cell[data-column-id="volume"]:hover {
         .tooltip-dex {
-          display: block;
+          display: flex;
         }
       }
 
